# coh3-stats-desktop-app

./: .augment-guidelines  .gitattributes  .gitignore  .pnp.cjs  .prettierignore  MICROSOFT_STORE_BUILD.md  README.md  Readme.md  UPDATER_FIX_SUMMARY.md  UPDATER_IMPLEMENTATION.md  index.html  package.json  tauri-v2-migration.md  updater.json  vite.config.ts  wdio.conf.cjs
.github/: release-drafter.yml  renovate.json
.github/workflows/: build-cache.yaml  publish.yaml  tests.yaml
reference/: MatchStartMessage
src/: About.tsx  Game.tsx  Providers.tsx  Root.tsx  Router.tsx  Settings.tsx  WindowTitleBar.module.css  WindowTitleBar.tsx  coh3-data.ts  coh3-types.ts  config.ts  configStore.ts  main.tsx  map-stats-provider.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  full-bundle-tauri.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.microsoftstore.conf.json
src-tauri/benches/: parse_log_file_reverse.rs
src-tauri/capabilities/: desktop-app-capabilities.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: battlegroup_info.rs  config.rs  dp_utils.rs  lib.rs  main.rs  map_stats.rs  overlay_server.rs  parse_log_file.rs
src-tauri/src/audio_manager/: mod.rs  windows_audio.rs
src-tauri/src/parse_log_file/: tests.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/cohdb/: mod.rs
src-tauri/src/plugins/cohdb/auth/: error.rs  mod.rs  responses.rs
src-tauri/src/plugins/cohdb/sync/: mod.rs
src-tauri/src/process_watcher/: mod.rs  unified_monitor.rs
src-tauri/src/tests/: mod.rs  test_replay_parser.rs  tests_lib.rs  tests_parser.rs
src/analytics/: propertyGetters.tsx
src/components/: ErrorBoundary.tsx  ErrorCard.tsx  GameState.tsx  MapCard.tsx  Online-players.tsx  PlayerCard.tsx  PlayerELO.tsx  PlayerLosses.tsx  PlayerRank.tsx  PlayerStreak.tsx  PlayerWinRatio.tsx  PlayerWins.tsx  SummaryCard.tsx  ToggleCollorShemeButton.tsx  UploadNotifications.tsx
src/components/other/: COHDB-icon.tsx  Discord-icon.tsx  Steam-icon.tsx  ellipsis-text.tsx  helper-icon.tsx  rank-icon.tsx
src/config-store/: configValueFactory.tsx  fontScaleConfig.tsx  store.tsx
src/game-data-provider/: GameData-types.ts  GameData.ts  GameDataProvider.tsx  configValues.tsx  gameClosedObject  gameStateObject  useFullGameData.tsx  useRawGameData old.tsx  useRawGameData.tsx
src/game-found/: audioMuteConfigValues.tsx  autoSwitchConfigValues.tsx  bringToFrontConfigValues.tsx  gameSoundConfigValues.tsx  playSound.ts  useAudioManager.tsx
src/game-found-sound/: configValues.tsx  playSound.ts
src/hooks/: useOnlinePlayersData.tsx
src/mixpanel/: mixpanel.ts  propertyGetters.tsx
src/providers/: FontScaleInjector.tsx  FontScaleProvider.tsx  MapStatsProvider.tsx  SteamOnlinePlayersProvider.tsx  UpdaterProvider.tsx
src/store/: hooks.tsx  store.tsx  test.tsx
src/streamer-overlay/: HTML.tsx  OverlayApp.tsx  PlayerEntry.tsx  configValues.tsx  renderStreamerOverlay.tsx
src/streamer-overlay/SPECIAL-REACT/: HTML.tsx  OverlayApp.tsx  PlayerEntry.tsx
src/updater-provider/: UpdaterProvider.tsx
src/utils/: coh3-data.ts  coh3-leaderboards-api.ts  coh3-matches.ts  coh3-relic-api.ts  coh3-stats-api.ts  data-types.ts  external-routes.ts  match-detail-helpers.ts  match-helpers.ts  mixpanel.ts  navigation.ts  notifications.tsx  renameLabels.ts  renameLabels.tsx  steam-api.ts  team-grouping.README.md  team-grouping.example.ts  team-grouping.ts  utils.ts
src/views/: About.tsx  Debug.tsx  Game.tsx  Replays.tsx  Root.tsx  Settings.tsx
src/views/Game/: Game.tsx
src/views/Game/arranged-teams/: arranged-team-card.tsx
src/views/Game/components/: MapCard.tsx  PlayerCard.tsx  PlayerLosses.tsx  PlayerWinRatio.tsx  PlayerWins.tsx  SummaryCard.tsx  arranged-team-card.tsx  player-card.module.css
src/views/Leaderboards/: index.tsx
src/views/RecentGames/: PlayerMatchesDataTable.tsx  index.tsx  match-detail-drawer.tsx  match-details-data-table.tsx  matches-table.module.css
src/views/RecentGames/matches-table/: render-map.tsx  render-players.tsx
test/helpers/: assertions.js  test-helpers.js
test/helpers/pages/: AboutPage.js  BasePage.js  GamePage.js  HeaderPage.js  NavigationPage.js  README.md  RecentGamesPage.js  ReplaysPage.js  SettingsPage.js  index.js
test/specs/: example.e2e.js  main.e2e.js  obs-overlay.e2e.js
