[package]
name = "coh3-stats-desktop-app"
version = "2.2.0"
description = "Grenadier - COH3 Companion"
authors = ["coh3stats team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "coh3_stats_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
dirs = "=5.0.1"
keyring = "=2.3.3"
log = "=0.4.29"
machine-uid = "=0.5.4"
nom = "=7.1.3"
notify = "=6.1.1"
oauth2 = "=4.4.2"
regex = "=1.12.3"
# Reqwest
reqwest = { version = "=0.12.28", features = ["json", "multipart", "brotli", "gzip", "blocking"] }
rev_lines = "=0.3.0"
serde_json = "=1.0.149"
thiserror = "=1.0.69"
tokio = { version = "=1.49.0", features = ["time"] }
serde = { version = "=1.0.228", features = ["derive"] }
# Tauri deps
tauri = { version = "=2.10.2", features = ["tray-icon"] }
tauri-plugin-cli = "=2.4.1"
tauri-plugin-deep-link = "=2.4.7"
tauri-plugin-log = "=2.8.0"
tauri-plugin-single-instance = { version = "=2.4.0", features = ["deep-link"] }
tauri-plugin-store = "=2.4.2"
tauri-plugin-window-state = "=2.4.1"
tauri-plugin-clipboard-manager = "=2.3.2"
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-fs = "=2.4.5"
tauri-plugin-http = { version = "=2.5.7", features = ["unsafe-headers"] }
tauri-plugin-process = "=2.3.1"
tauri-plugin-updater = "=2.10.0"
tauri-plugin-shell = "=2.3.5"
tauri-plugin-opener = "=2.5.3"


# This is COH3 replay parser
vault = "=10.2.0"
# monitoring by sentry
sentry = "=0.46.1"
# For the OBS interface we need to expose webserver
tiny_http = "=0.12.0"


[target.'cfg(windows)'.dependencies]
windows = { version = "=0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }

[dev-dependencies]
criterion = { version = "=0.5.1", features = ["html_reports"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[[bench]]
name = "parse_log_file_reverse"
harness = false
